// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@theme/r-material: core/components: Navigation # should mount Navigation with props.title correctly 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.open_drawer"
        className="makeStyles-menuButton-5"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Link))
        className="makeStyles-title-4"
        color="inherit"
        component="a"
        href="/"
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-7"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-8",
      }
    }
    open={false}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-9"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.close_drawer"
        className="makeStyles-drawerButton-11"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-12"
  >
    <div
      className="makeStyles-drawerSpace-10"
    />
  </main>
</div>
`;

exports[`@theme/r-material: core/components: Navigation # should show SideBar when state.open is true 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2 makeStyles-appBarShift-3"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.open_drawer"
        className="makeStyles-menuButton-5 makeStyles-hide-6"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Link))
        className="makeStyles-title-4"
        color="inherit"
        component="a"
        href="/"
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-7"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-8",
      }
    }
    open={true}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-9"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.close_drawer"
        className="makeStyles-drawerButton-11"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-12 makeStyles-contentShift-13"
  >
    <div
      className="makeStyles-drawerSpace-10"
    />
  </main>
</div>
`;

exports[`@theme/r-material: core/components: Navigation # should show menus when have non-empty menus props 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.open_drawer"
        className="makeStyles-menuButton-5"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Link))
        className="makeStyles-title-4"
        color="inherit"
        component="a"
        href="/"
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-7"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-8",
      }
    }
    open={false}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-9"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.close_drawer"
        className="makeStyles-drawerButton-11"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="category"
      key="0"
      link="/to/somewhere"
      name="PostList"
      priority={3}
    />
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="bookmark"
      key="1"
      link="/to/somewhere"
      name="Tags"
      priority={3}
    />
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-12"
  >
    <div
      className="makeStyles-drawerSpace-10"
    />
  </main>
</div>
`;

exports[`@theme/r-material: core/components: Navigation # should show profile when have profile props 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.open_drawer"
        className="makeStyles-menuButton-5"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Link))
        className="makeStyles-title-4"
        color="inherit"
        component="a"
        href="/"
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Link))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-7"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-8",
      }
    }
    open={false}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-9"
    >
      <Profile
        avatar="https://img.aquariuslt.com/social/avatar.png"
        description=""
        name=""
        subtitle=""
      />
      <WithStyles(ForwardRef(IconButton))
        aria-label="core.navigation.close_drawer"
        className="makeStyles-drawerButton-11"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="category"
      key="0"
      link="/to/somewhere"
      name="PostList"
      priority={3}
    />
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="bookmark"
      key="1"
      link="/to/somewhere"
      name="Tags"
      priority={3}
    />
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-12"
  >
    <div
      className="makeStyles-drawerSpace-10"
    />
  </main>
</div>
`;
